[package]
name = "who_doesnt_follow_me_on_github"
version = "0.1.0"
edition = "2021"
authors = ["Mateo Lafalce <mateo.lafalce04@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octorust = "0.3.2"
tokio = { version = "1", features = ["full"] }
