[package]
name = "wdfm"
version = "1.0.1"
edition = "2021"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octorust = "0.3.2"
tokio = { version = "1.35.1", features = ["full"] }
rpassword = "7.3.1"